# nexus--babel-alexandria-

./: # Theoria Linguae Machina Comprehensive Design Document for the….md  .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  benchmark_hypernode.py  design_document.md  pyproject.toml  roadmap.md  seed.yaml
.Jules/: palette.md
.github/: SECURITY.md
.github/workflows/: ci-minimal.yml
.jules/: bolt.md  palette.md  sentinel.md
core/: README.md
core/hypergraph/: base.py
tests/: test_hypergraph.py  test_hypernode.py
tests/core/hypergraph/: test_base.py
