[tool.poetry]
name = "rlos"
version = "0.1.0"
description = "Rhetorical-Linguistic Operating System"
authors = ["RLOS Team <team@rlos.org>"]
readme = "README.md"
packages = [{include = "core"}, {include = "modules"}, {include = "engines"}, {include = "interfaces"}, {include = "safety"}, {include = "meta"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"

[tool.ruff]
select = ["E", "F", "B", "S", "I"]
line-length = 100
target-version = "py312"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
