[project]
name = "rhetorical-linguistic-operating-system"
version = "0.1.0"
description = "The Rhetorical-Linguistic Operating System (RLOS) implementation"
authors = [
    {name = "Sentinel",email = "sentinel@jules.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
